<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/fond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
       >

            <LinearLayout
                android:id="@+id/annonces_formulaire_separator_1"
                style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/caracteristiques_vehicule" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaire_carrosserie"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/carrosserie" />

                <TextView
                    android:id="@+id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaire_marque_modele"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/marque_modele" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaire_energie"
                style="@style/formulaire_cellule"
                android:layout_marginBottom="15dip" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/energie" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/annonces_formulaire_separator_2"
                style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/caracteristiques_vehicule_supplementaire" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaire_boite_vitesse"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/boite_de_vitesse" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaire_nb_porte"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/nombre_porte" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/requis"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaires_annee"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/annee" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaires_km_max"
                style="@style/formulaire_cellule"
                android:layout_marginBottom="15dip" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/km_max" />

                <EditText
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:hint="@string/facultatif"
                    android:inputType="number" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/annonces_formulaire_separator_3"
                style="@style/formulaire_separator" >

                <TextView
                    style="@style/formulaire_separator_titre"
                    android:text="@string/caracteristiques_annonce" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaires_prix"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/prix" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/annonces_formulaires_departement"
                style="@style/formulaire_cellule" >

                <TextView
                    style="@style/formulaire_cellule_titre"
                    android:text="@string/departement" />

                <TextView
                    android:id="@id/text"
                    style="@style/formulaire_cellule_texte"
                    android:text="@string/facultatif" />

                <ImageView style="@style/formulaire_cellule_indicator" />
            </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dip" >

        <View
            android:id="@+id/annonces_formulaire_centre"
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/annonces_formulaire_bouton_rechercher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fond_bleu_select_bleu"
            android:gravity="center_horizontal"
            android:text="@string/rechercher"
            android:textColor="@color/couleur_texte_blanc" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/annonces_formulaire_nombre_annonces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:gravity="center"
                    android:paddingBottom="2dip"
                    android:paddingTop="2dip"
                    android:text="0"
                    android:textColor="@color/couleur_texte_blanc"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/resultats_petit"
                    android:textColor="@color/couleur_texte_blanc"
                    android:textSize="20sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>